# Galene

./: .gitignore  ARCHITECTURE.md  ATTACK_VECTORS.md  BUGS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  FEATURES.md  IMPROVEMENTS.md  LICENSE-APACHE  README.md  ROADMAP.md
docs/: FlowState.md  flowstate_render_scene.md
environments/: rainy_library.ron
flowstate-app/: Cargo.toml
flowstate-app/src/: main.rs  state.rs  viewer.rs
flowstate-app/src/commands/: analytics.rs  environment.rs  mod.rs  session.rs
flowstate-audio/: Cargo.toml
flowstate-audio/src/: ambient_engine.rs  evolution_audio.rs  lib.rs  patches.rs
flowstate-core/: Cargo.toml
flowstate-core/src/: analytics.rs  environment.rs  evolution.rs  lib.rs  richness.rs  serialiser.rs  session.rs
flowstate-visual/: Cargo.toml
flowstate-visual/examples/: dof_layers.rs  render_frame.rs  scene_render.rs
flowstate-visual/src/: compositor.rs  dof.rs  driver.rs  evolution_visual.rs  gpu.rs  layer.rs  lib.rs  renderer.rs  scene.rs
flowstate-visual/src/modules/: geometric_field.rs  glass_rain.rs  mod.rs  placeholder.rs  shader_canvas.rs  volumetric_light.rs
flowstate-visual/src/post/: bloom.rs  grade.rs  grain.rs  mod.rs  vignette.rs
flowstate-visual/src/shaders/: composite.wgsl  dof.wgsl  geometric_field.wgsl  glass_rain.wgsl  placeholder.wgsl  shader_canvas.wgsl  volumetric_light.wgsl
flowstate-visual/src/shaders/post/: bloom_extract.wgsl  post.wgsl
