[package]
name = "flowstate-app"
description = "FlowState desktop application (Tauri shell — currently a placeholder binary)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "flowstate"
path = "src/main.rs"

[dependencies]
flowstate-core.workspace = true
flowstate-audio.workspace = true
flowstate-visual.workspace = true

# Windowed viewer (pre-Tauri): a winit window + wgpu surface running the live
# render loop. `cargo run -p flowstate-app` opens it; `-- --headless` runs the
# logic demo instead.
winit = "0.30"
wgpu = "29"
pollster = "0.4"

# tauri is deferred to the Phase 0 app scaffold. The `frontend/` tree holds the
# eventual TypeScript UI (FlowState §13.2).
