[package]
name = "flowstate-visual"
description = "FlowState scene rendering: layer compositing, the EnvironmentDriver, and the new primitives."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
flowstate-core.workspace = true
serde.workspace = true
ron.workspace = true

# Renderer. The render-doc §12 questions are resolved (DECISIONS D-011):
# Synaesthesia is not built, so this stack is greenfield here. wgpu is now
# in-phase (D-005 gate lifted).
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
